Add some duck-typed proxies, fix access for java 11, add test app, update javadocs and readme, set version to => 0.2.0