@@ -15,7 +15,7 @@
     <url>https://github.com/Scomponents/fx.versions.bridge</url>
     <description>A compatibility bridge for JavaFX, allowing writing code that works with both Java 8 and Java 11+ versions of JavaFX (Java11 part)</description>
 
-    <version>0.1.1-java${javaVersion}</version>
+    <version>${lib.version}</version>
     <artifactId>bridge</artifactId>
     <packaging>jar</packaging>
 
@@ -50,6 +50,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.intechcore.scomponents.fx</groupId>
+            <artifactId>bridge-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>11</version>
@@ -57,17 +62,39 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
-                <configuration>
-                    <argLine> --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argLine>
-                    <argLine> --add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>3.1.2</version>-->
+<!--                <configuration>-->
+<!--                    <argLine> &#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argLine>-->
+<!--                    <argLine> &#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED</argLine>-->
+<!--                    <argLine> &#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</argLine>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
+
+    <profiles>
+        <profile>
+            <id>mavencenralRelease</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                            <autoPublish>false</autoPublish>
+                            <waitUntil>validated</waitUntil>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
